@@ -5,6 +5,7 @@ OpenLDAP 2.3.14 Engineering
 	Fixed slapd ACL exact attrval clause needs normalization (ITS#4255)
 	Fixed slapd sc_prev update after free bug (ITS#4237)
 	Fixed slapd issues (ITS#4243,4251)
+	Fixed slapd cn=config (ITS#4249)
 	Fixed slapd-bdb/hdb mode argument parsing (ITS#4257)
 	Fixed slapd-bdb/hdb cn=config reindexing (ITS#4260)
 	Fixed slapd-bdb/hdb cn=config olcDbIndex modify/replace (ITS#4262)
